--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,35 @@
 {
     "appService.defaultWebAppToDeploy": "/subscriptions/04a2e7f5-3662-4673-90fe-c38ba145ecda/appservices/subscriptions/04a2e7f5-3662-4673-90fe-c38ba145ecda/resourceGroups/appsvc_linux_centralus_basic/providers/Microsoft.Web/sites/EcomWebsiteFrontEnd",
-    "appService.deploySubpath": "ecommerce-website"
+    "appService.deploySubpath": "ecommerce-website",
+    "appService.zipIgnorePattern": [
+        "__pycache__{,/**}",
+        "*.py[cod]",
+        "*$py.class",
+        ".Python{,/**}",
+        "build{,/**}",
+        "develop-eggs{,/**}",
+        "dist{,/**}",
+        "downloads{,/**}",
+        "eggs{,/**}",
+        ".eggs{,/**}",
+        "lib{,/**}",
+        "lib64{,/**}",
+        "parts{,/**}",
+        "sdist{,/**}",
+        "var{,/**}",
+        "wheels{,/**}",
+        "share/python-wheels{,/**}",
+        "*.egg-info{,/**}",
+        ".installed.cfg",
+        "*.egg",
+        "MANIFEST",
+        ".env{,/**}",
+        ".venv{,/**}",
+        "env{,/**}",
+        "venv{,/**}",
+        "ENV{,/**}",
+        "env.bak{,/**}",
+        "venv.bak{,/**}",
+        ".vscode{,/**}"
+    ]
 }
